--- a/listing/edit/index.html
+++ b/listing/edit/index.html
@@ -34,7 +34,7 @@
             <h1>Update Listing</h1>
             <div class="row">
                 <div class="col-lg-12 mt-5">
-                    <div class="card createlisting">
+                    <div class="card editlisting">
                         <div class="card-body mb-4">
                             <div class="w-100">
 
