--- a/listing/index.html
+++ b/listing/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="View your own or others full listing that they're selling on WeBuy here">
     <title>WeBuy | Listing</title>
     <link rel="stylesheet" href="/dist/css/styles.css">
 </head>
@@ -68,9 +69,9 @@
     <div class="container">
         <footer class="py-3 my-4">
             <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-                <li class="nav-item"><a href="../index.html" class="nav-link px-2 text-muted">Home</a></li>
-                <li class="nav-item"><a href="../listings/" class="nav-link px-2 text-muted">Listings</a></li>
-                <li class="nav-item"><a href="../listing/create/" class="nav-link px-2 text-muted">New Listing</a></li>
+                <li class="nav-item"><a href="/index.html" class="nav-link px-2 text-muted">Home</a></li>
+                <li class="nav-item"><a href="/listings/" class="nav-link px-2 text-muted">Listings</a></li>
+                <li class="nav-item"><a href="/listing/create/" class="nav-link px-2 text-muted">New Listing</a></li>
             </ul>
             <p class="text-center text-muted">© 2023 WeBuy, Inc</p>
         </footer>
