--- a/profile/login/index.html
+++ b/profile/login/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Log in to WeBuy here">
     <title>WeBuy | Log in</title>
     <link rel="stylesheet" href="/dist/css/styles.css">
 </head>
@@ -68,7 +69,7 @@
     <div class="container">
         <footer class="py-3 my-4">
             <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-                <li class="nav-item"><a href="../../index.html" class="nav-link px-2 text-muted">Home</a></li>
+                <li class="nav-item"><a href="/index.html" class="nav-link px-2 text-muted">Home</a></li>
                 <li class="nav-item"><a href="/profile/register/" class="nav-link px-2 text-muted">Register</a></li>
                 <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Login</a></li>
             </ul>
