--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Welcome to WeBuy where you can sell anything from wherever you are">
     <title>WeBuy | Home</title>
-    <link rel="stylesheet" href="/dist/css/styles.css">
+    <link rel="stylesheet" href="./dist/css/styles.css">
 </head>
 
 <body>
