--- a/listing/edit/index.html
+++ b/listing/edit/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Edit your own listing to sell on WeBuy here">
     <title>WeBuy | Edit Listing</title>
-    <link rel="stylesheet" href="/dist/css/styles.css">
+    <link rel="stylesheet" href="./dist/css/styles.css">
 </head>
 
 <body>
