--- a/listing/index.html
+++ b/listing/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="View your own or others full listing that they're selling on WeBuy here">
     <title>WeBuy | Listing</title>
-    <link rel="stylesheet" href="/dist/css/styles.css">
+    <link rel="stylesheet" href="./dist/css/styles.css">
 </head>
 
 <body>
