--- a/listings/index.html
+++ b/listings/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="View all listings available on WeBuy here">
     <title>WeBuy | Listings</title>
-    <link rel="stylesheet" href="/dist/css/styles.css">
+    <link rel="stylesheet" href="./dist/css/styles.css">
 </head>
 
 <body>
