--- a/profile/index.html
+++ b/profile/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="View your own profile on WeBuy here">
     <title>WeBuy | Profile</title>
-    <link rel="stylesheet" href="/dist/css/styles.css">
+    <link rel="stylesheet" href="./dist/css/styles.css">
 </head>
 
 <body>
